# PeriodicTable

./: .gitignore  Makefile.am  Readme.md  aclocal.m4  autogen.sh  configure.ac  mod_install.sh
_layouts/: default.html
build_scripts/PeriodicTable/: PKGBUILD
data/: Makefile.am  menubar.ui  org.example.ptbl.gschema.xml  ptbl.desktop.in
data/icons/hicolor/: Makefile.am
data/icons/hicolor/48x48/apps/: Makefile.am
data/icons/hicolor/scalable/apps/: Makefile.am
data/ui/: Makefile.am  menubar.ui  pref.schema.xml
ptbl/: __init__.py  __init__.py.in  __main__.py  dialogue.py  elem_H.py  elems.db  main.py  menu.py  retrive.py  setup.py  veggards.py
